--- a/res/styles.css
+++ b/res/styles.css
@@ -1,6 +1,11 @@
 /*styles.css */
 * {
-    font-family: 'Arial', 'Helvetica', 'sans-serif'
+    font-family: 'dmsans', 'Helvetica', 'sans-serif'
+}
+
+@font-face {
+    font-family: 'dmsans';
+    src: url(./fnt/dmsans.ttf)
 }
 
 #header {
